--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@mantine/core": "8.3.1",
     "@mantine/hooks": "8.3.1",
+    "echarts": "^6.0.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
